all news category added

--- a/index.html
+++ b/index.html
@@ -31,18 +31,7 @@
     </header>
     <main>
         <section>
-            <div class="container mx-auto mt-3">
-                <ul class="nav justify-content-center fs-5">
-                    <li class="nav-item"><a class="nav-link" href="#">Home </a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Breaking News</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Regular News</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">International news</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Sports</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Entertainment</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Culture</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Arts</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">All news</a></li>
-                </ul>
+            <div id="news-category-container" class="container d-flex mt-3">
             </div>
         </section>
     </main>
