total news item added

--- a/index.html
+++ b/index.html
@@ -34,16 +34,24 @@
             <div id="news-category-container" class="container d-flex mt-3">
             </div>
         </section>
+        <section>
+            <div class="text-center pt-4 fs-3" id="total-news"></div>
+        </section>
         <section class="mt-5">
             <div id="newsCategoryIn-container" class="card mb-3 mx-auto" style="max-width: 900px;">
 
             </div>
         </section>
+        <!-- spinner -->
+        <section id="spinner">
+            <div style="height: 300px;" class="d-flex justify-content-center align-items-center">
+                <div class="spinner-border text-success" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        </section>
         <!-- modal -->
         <section>
-
-
-
             <!-- Modal -->
             <div class="modal fade" id="newsModal" tabindex="-1" aria-labelledby="newsModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
