--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="navbar-nav">
                     <a class="nav-link fw-bold" href="#">Home</a>
-                    <a class="nav-link fw-bold" href="#">Blog</a>
+                    <a target="_blank" class="nav-link fw-bold" href="blog.html">Blog</a>
                 </div>
 
             </div>
@@ -43,7 +43,7 @@
             </div>
         </section>
         <!-- spinner -->
-        <section id="spinner">
+        <section id="spinner" class="d-none">
             <div style="height: 300px;" class="d-flex justify-content-center align-items-center">
                 <div class="spinner-border text-success" role="status">
                     <span class="visually-hidden">Loading...</span>
