error handler added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="news.css">
 </head>
 
-<body>
+<body style="background-color: lightblue;">
     <header>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid d-flex justify-content-around">
