--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Honest-News</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <!-- font awsome -->
+    
+        <!-- font awsome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="news.css">
+
 </head>
 
 <body>
@@ -49,16 +53,19 @@
         </section>
         <!-- news category container ends here -->
 
+        <!--total news start   -->
         <section>
             <div class="text-center pt-4 fs-3" id="total-news"></div>
         </section>
+        <!-- total news ends -->
 
+        <!-- news in category starts -->
         <section class="mt-5">
             <div id="newsCategoryIn-container" class="container mb-3 mx-auto">
-
-
             </div>
         </section>
+        <!-- news in category ends -->
+
         <!-- spinner starts here -->
         <section id="spinner" class="d-none">
             <div style="height: 300px;" class="d-flex justify-content-center align-items-center">
@@ -70,9 +77,8 @@
         <!-- spinner ends here  -->
 
 
-        <!-- modal -->
+        <!-- modal starts here -->
         <section>
-            <!-- Modal -->
             <div class="modal fade" id="newsModal" tabindex="-1" aria-labelledby="newsModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
@@ -90,8 +96,10 @@
                 </div>
             </div>
         </section>
+        <!-- modal ends here -->
     </main>
-
+    
+    <!-- script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
