--- a/blog.html
+++ b/blog.html
@@ -15,26 +15,26 @@
         <h1 class="text-success text-center p-4">Blog</h1>
     </header>
     <main>
-        <section>
+        <section class="bg-success text-white">
             <div class="p-4">
-                <h2>Show the difference between var, let and const</h2>
-                <p>var keyword in JavaScript: The var is the oldest keyword to declare a variable in JavaScript.
+                <h2>1. Show the difference between var, let and const</h2>
+                <p>1.var keyword in JavaScript: The var is the oldest keyword to declare a variable in JavaScript.
 
                     Scope: Global scoped or function scoped. The scope of the var keyword is the global or function
                     scope. It means variables defined outside the function can be accessed globally, and variables
                     defined inside a particular function can be accessed within the function. </p>
-                <p>let keyword in JavaScript: The let keyword is an improved version of the var keyword.
+                <p>2.let keyword in JavaScript: The let keyword is an improved version of the var keyword.
 
                     Scope: block scoped: The scope of a let variable is only block scoped. It can't be accessible
                     outside the particular block ({block}). Let's see the below example.</p>
-                <p>const keyword in JavaScript: The const keyword has all the properties that are the same as the let
+                <p>3.const keyword in JavaScript: The const keyword has all the properties that are the same as the let
                     keyword, except the user cannot update it.
 
                     Scope: block scoped: When users declare a const variable, they need to initialize it, otherwise, it
                     returns an error. The user cannot update the const variable once it is declared. </p>
             </div>
             <div class="p-4">
-                <h2>Show the difference between regular function and arrow function </h2>
+                <h2>2. Show the difference between regular function and arrow function </h2>
                 <p>1.Arrow functions are a new way to write anonymous function expressions and
                     Regular functions created using function declarations or expressions are constructible and callable.
 
@@ -61,7 +61,7 @@
 
             </div>
             <div class="p-4">
-                <h2>Show the difference among map, forEach, filter, find</h2>
+                <h2>3. Show the difference among map, forEach, filter, find</h2>
                 <h4>forEach()</h4>
                 <p>1.The forEach() method does not create a new array based on the given array.
                     2.The forEach() method returns undefined.
